[workspace]
members = [
    ".cargo-task/generate-drivers",
    "drivers/a4988",
    "drivers/drv8825",
    "drivers/stspin220",
    "drivers/tb67s128ftg",
]
default-members = [
    ".",
    ".cargo-task/generate-drivers",
    "drivers/a4988",
    "drivers/drv8825",
    "drivers/stspin220",
    "drivers/tb67s128ftg",
]

[package]
name = "stepper"
version = "0.6.0"
authors = [
    "Hanno Braun <hanno@braun-embedded.com>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2018"

description = "Universal Stepper Motor Interface"
repository = "https://github.com/braun-embedded/stepper"
license = "0BSD"
keywords = ["stepper", "motor", "driver", "abstract", "interface"]
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]


[dependencies]
embedded-hal = "1.0.0-rc.1"
fugit = "0.3.7"
#fugit-timer = "0.1.3"
fugit-timer = { git = "https://github.com/Ultrajackstr/fugit-timer.git", branch = "feature/timer-storage-selection" }
nb = "1.1.0"
paste = "1.0.14"
ramp-maker = "0.2.0"

[dependencies.embedded-hal-stable]
version = "0.2.7"
package = "embedded-hal"

[dependencies.num-traits]
version = "0.2.16"
default-features = false

[dependencies.replace_with]
version = "0.1.7"
default-features = false


[dev-dependencies]
fixed = "1.23.1"
typenum = "1.17.0"


[features]
default = ["a4988", "drv8825", "stspin220", "dq542ma", "tb67s128ftg"]
a4988 = []
drv8825 = []
stspin220 = []
dq542ma = []
tb67s128ftg = []
u64 = []
