[package]
name = "generate-drivers"
version = "0.0.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
edition = "2018"
publish = false

[dependencies]
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.96"
tinytemplate = "1.2.1"
toml = "0.5.11"

[dependencies.cargo_task_util]
path = "../cargo_task_util"
